# overfitting_simulator

./: .gitignore  AWS_IMPLEMENTATION_COMPLETE.md  README.md  pyproject.toml  pytest.ini  quick_start.ps1  requirements.txt  setup.py
.github/workflows/: deploy-infrastructure.yml  deploy-lambda.yml  pipeline.yml  run-pipeline.yml
backup/: 01_generate_overfit_strategies.py  03_select_best_strategy.py  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  JOB_SEARCH_GUIDE.md  PORTFOLIO_README.md  README_NEW.md  REORGANIZATION_SUMMARY.md  START_HERE.md  START_HERE_REORGANIZED.md  app.py  docker-compose.yml
backup/.aws/: task-definition.json
backup/.aws/terraform/: main.tf
backup/.github/workflows/: ci-cd.yml
ci/github/workflows/: deploy-lambda.yml
config/: .env.example  app_config.yaml
data/: BTCUSD_Candlestick_5_M_BID_01.10.2024-10.11.2024.csv  btc_price_data.csv  strategies.json  synthetic_price_data.csv
docs/: AWS_CLOUD_ARCHITECTURE.md  CHECKLIST.md  CONTRIBUTING.md  DEPLOYMENT_ORDER.md  HOW_TO_RUN.md
infrastructure/aws/: step-functions-state-machine.json  task-definition.json
infrastructure/aws/eb-config/: environment.config
infrastructure/docker/: .dockerignore  Dockerfile  docker-compose.yml
infrastructure/lambda/: 01_generate_strategies_lambda.py  02_backtest_strategies_lambda.py  03_select_best_lambda.py  04_validate_strategy_lambda.py  05_visualize_lambda.py  build_lambda_package.ps1  build_lambda_package.sh  requirements.txt
infrastructure/terraform/: README.md  lambda.tf  main.tf  setup-backend.ps1  setup-backend.sh
infrastructure/terraform/lambda-pipeline/: lambda.tf  main.tf
results/: best_strategy.json  training_performance.csv  validation_results.csv  validation_results.json  validation_summary.json
scripts/: 01_generate_strategies.py  02_backtest_strategies.py  04_validate_strategy.py  05_visualize_results.py  quick_start.sh  run_all.bat
src/: __init__.py  app.py
src/backtesting/: __init__.py
src/visualization/: __init__.py
tests/: test_backtesting.py
